@@ -1,0 +1,10 @@
+<configuration>
+   <runtime>
+      <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+       <dependentAssembly>
+         <assemblyIdentity name="Mono.Cairo" publicKeyToken="35e10195dab3c99f" />
+         <bindingRedirect oldVersion="1.0.5000.0" newVersion="2.0.0.0"/>
+       </dependentAssembly>
+      </assemblyBinding>
+   </runtime>
+</configuration>
