@@ -1,3 +1,7 @@
+2008-10-21  Mike Kestner  <mkestner@novell.com>
+
+	* cairo/*: add a policy assembly for 1.0 defering to 2.0.
+
 2008-10-13  Brad Taylor  <brad@getcoded.net>
 
 	* Makefile.am:
